# anime_image_downloader

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  main.js  package.json  pubspec.yaml  renderer.js  styles.css  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/dev/zhaocake/anime_image_downloader_flutter/: MainActivity.kt
assets/: convert_icon.py
docs/: API_USAGE.md  CHANGELOG.md  TODO.md
frontend/: Cargo.toml  index.html  renderer.js  style.css
frontend/src/: app.rs  main.rs
lib/: main.dart
lib/app/: app.dart
lib/core/config/: app_settings.dart  settings_controller.dart
lib/core/model/: image_item.dart  image_sort.dart
lib/core/network/: cnmiw_client.dart
lib/core/repository/: image_repository.dart
lib/core/storage/: settings_store.dart
lib/features/gallery/: gallery_controller.dart  gallery_page.dart
lib/features/settings/: settings_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitignore  icon.icns
src-tauri/src/: main.rs
src/components/: ImageGrid.vue  Sidebar.vue
src/services/: api.ts
src/stores/: app.ts
src/utils/: image.ts
test/: widget_test.dart
tool/launcher_icons/: android.yaml  ios.yaml  macos.yaml  windows.yaml
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
