[package]
name = "anime-image-downloader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
image = "0.24"
base64 = "0.21"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
