[package]
name = "anime-image-downloader"
version = "0.2.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
serde_json = "1"
